// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders error alerts correctly 1`] = `
.c0 {
  border: solid 3px #0a4d7d;
  padding: 10px 20px;
  background: rgba(4,33,54,0.7);
  color: #EEEEEE;
  border-radius: 4px;
  border: solid 3px #c00;
  background: rgba(102,0,0,0.7);
}

<p
  a={1}
  b={2}
  c={3}
  className="c0"
  theme={
    Object {
      "alert": Object {
        "error": "#FF0000",
      },
      "brand": Object {
        "dark": "rgb(1, 20, 46)",
        "light": "rgb(8, 62, 101)",
      },
      "textColor": "#EEEEEE",
    }
  }
/>
`;

exports[`Alert renders with no props specified 1`] = `
.c0 {
  border: solid 3px #0a4d7d;
  padding: 10px 20px;
  background: rgba(4,33,54,0.7);
  color: #EEEEEE;
  border-radius: 4px;
}

<p
  className="c0"
  theme={
    Object {
      "alert": Object {
        "error": "#FF0000",
      },
      "brand": Object {
        "dark": "rgb(1, 20, 46)",
        "light": "rgb(8, 62, 101)",
      },
      "textColor": "#EEEEEE",
    }
  }
/>
`;

exports[`Alert renders with props specified 1`] = `
.c0 {
  border: solid 3px #0a4d7d;
  padding: 10px 20px;
  background: rgba(4,33,54,0.7);
  color: #EEEEEE;
  border-radius: 4px;
}

<p
  a={1}
  b={2}
  c={3}
  className="c0"
  theme={
    Object {
      "alert": Object {
        "error": "#FF0000",
      },
      "brand": Object {
        "dark": "rgb(1, 20, 46)",
        "light": "rgb(8, 62, 101)",
      },
      "textColor": "#EEEEEE",
    }
  }
/>
`;
